Skip to content

GitLab

  • Projects
  • Groups
  • Snippets
  • Help
    • Loading...
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
    • Contribute to GitLab
  • Sign in
E
evolution-data-server
  • Project overview
    • Project overview
    • Details
    • Activity
    • Releases
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 39
    • Issues 39
    • List
    • Boards
    • Labels
    • Service Desk
    • Milestones
  • Merge Requests 0
    • Merge Requests 0
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Operations
    • Operations
    • Incidents
    • Environments
  • Packages & Registries
    • Packages & Registries
    • Container Registry
  • Analytics
    • Analytics
    • CI/CD
    • Repository
    • Value Stream
  • Wiki
    • Wiki
  • Snippets
    • Snippets
  • Members
    • Members
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • GNOME
  • evolution-data-server
  • Issues
  • #185

Closed
Open
Created Jan 23, 2020 by Marius Bakke@mbakke

Behavior of icalattach_new_from_data() changed in libical 3.0.7

After updating libical from 3.0.6 to 3.0.7, test_attachments from test-cal-meta-backend.c fails:

 99/101 Test  #99: test-cal-meta-backend .....................Child aborted***Exception:   0.31 sec
dbus-daemon[9821]: [session uid=998 pid=9821] Activating service name='org.gnome.evolution.dataserver.Sources5' requested by ':1.0' (uid=998 pid=9818 comm="/tmp/guix-build-evolution-data-server-3.32.4.drv-0")                                       
dbus-daemon[9821]: [session uid=998 pid=9821] Successfully activated service 'org.gnome.evolution.dataserver.Sources5'                              
/ECalMetaBackend/MergeInstances: OK
/ECalMetaBackend/Attachments: **
test-cal-meta-backend:ERROR:/tmp/guix-build-evolution-data-server-3.32.4.drv-0/evolution-data-server-3.32.4/tests/libedata-cal/test-cal-meta-backend.c:1001:check_attachment_content: assertion failed
 (base64_len (len(base64)) == expected_content_len (len(expected_content))): (0 == 341)
Edited Jan 23, 2020 by Milan Crha
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
None
Milestone
None
Assign milestone
Time tracking
None
Due date
None