Bump libical-glib dependency to 3.0.7 and benefit from its behavior

The benefit is that it can avoid redundant memory allocation of attachment
data. To make sure this new behavior is used bump also the libical-glib
dependency. Without it the memory could be leaked, when older libical-glib
would be used.

Related to https://gitlab.gnome.org/GNOME/evolution-data-server/issues/185